test: add comprehensive test suite covering all project requirements
- Add unit tests for ambulance queue management (Collections)
- Add integration tests for exception handling
- Add service history lifecycle tracking tests
- Add generic patient method tests
- Add REST API controller tests
- Add performance and load tests
- Achieve >85% test coverage